<resources>
    <string name="app_name">Zanzibar</string>
    <string name="welcome">Welcome</string>
    <string name="email">Enter email</string>
    <string name="logout">Logout</string>
    <string name="setting">setting</string>
    <string name="refresh">Refresh</string>
    <string name="sign">You are already sign in ? Login </string>
    <string name="Viewuser">REGISTED USER OF ZANZIBAR DISTRICT</string>
    <string name="edit_logname">Enter Email</string>
    <string name="edit_logpasword">Enter password</string>
    <string name="btn_regist">New user Regist here</string>
    <string name="edit_name">Enter name</string>
    <string name="edit_pasword">Enter pasword</string>
    <string name="contact">Enter Contact</string>
    <string name="Adress">Enter Address</string>
    <string name="Username">Enter username</string>
    <string name="attempt">NO of incorrect attempt</string>
    <string name="btn_login">Login</string>
    <string name="Regist">Regist</string>
    <string name="text">District Region</string>
    <string name="unguja">UNGUJA</string>
    <string name="pemba">PEMBA</string>
    <string name="view">View Visited User</string>
    <string name="btn_dis_N">North Region</string>
    <string name="btn_dis_S">South Region</string>
    <string name="btn_dis_W">West Region</string>
    <string name="btn_dis_NP">North Pba Region</string>
    <string name="btn_dis_Sp">Sorth Pba Region</string>
    <string name="title_activity_north">Map</string>
    <string name="title_activity_south">Map</string>
    <string name="title_activity_west">Map</string>
    <string name="title_activity_south__pba">Map</string>
    <string name="title_activity_northpba">Map</string>
    <string name="title_activity_southpba">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_sourth">Map</string>
</resources>